--- a/dbt_project/dbt_project.yml
+++ b/dbt_project/dbt_project.yml
@@ -31,7 +31,9 @@ clean-targets:         # directories to be removed by `dbt clean`
 # directory as views. These settings can be overridden in the individual model
 # files using the `{{ config(...) }}` macro.
 models:
-  dbt_project:
+  yrp_crime:
     # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+    staging:
+      materialized: view
+    core:
+      materialized: table
